--- a/fps/document-server/document-server.cabal
+++ b/fps/document-server/document-server.cabal
@@ -1,6 +1,6 @@
 cabal-version: 1.12
 
--- This file has been generated from package.yaml by hpack version 0.35.0.
+-- This file has been generated from package.yaml by hpack version 0.35.2.
 --
 -- see: https://github.com/sol/hpack
 
@@ -33,6 +33,7 @@ library
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
       base >=4.7 && <5
+    , yesod
   default-language: Haskell2010
 
 executable document-server-exe
@@ -45,6 +46,7 @@ executable document-server-exe
   build-depends:
       base >=4.7 && <5
     , document-server
+    , yesod
   default-language: Haskell2010
 
 test-suite document-server-test
@@ -58,4 +60,5 @@ test-suite document-server-test
   build-depends:
       base >=4.7 && <5
     , document-server
+    , yesod
   default-language: Haskell2010
