more quickly get local dev running
the menu isn't re-rendering

cleaning up some stuff that was for debugging

draw headers for rows and columns

trying to find an ergonomic way to handle the actual elements being lined up with the columns and headers, but it's difficult because the elements aren't put in order unless I specify their start col and start row manually

--- a/fps/spreadsheet/package.json
+++ b/fps/spreadsheet/package.json
@@ -5,6 +5,7 @@
     "bundle": "spago bundle-app --main Main --to dist/index.js && cp -r dist/** public/",
     "clean": "rm -rf ./public",
     "dev": "npm run clean && mkdir -p public && npm run watch",
+	"server": "node server.js",
     "tw": "tailwindcss -i ./main.css -o ./dist/main.css"
   },
   "devDependencies": {
