--- a/fps/spreadsheet/package.json
+++ b/fps/spreadsheet/package.json
@@ -5,11 +5,15 @@
     "bundle": "spago bundle-app --main Main --to dist/index.js && cp -r dist/** public/",
     "clean": "rm -rf ./public",
     "dev": "npm run clean && mkdir -p public && npm run watch",
-	"tw": "tailwindcss -i ./main.css -o ./dist/main.css"
+	"server": "node server.js",
+    "tw": "tailwindcss -i ./main.css -o ./dist/main.css"
   },
   "devDependencies": {
     "esbuild": "^0.19.1",
     "express": "^4.18.2",
     "tailwindcss": "^3.3.3"
+  },
+  "dependencies": {
+    "dotenv": "^16.3.1"
   }
 }
