--- a/api-practice/api-practice.cabal
+++ b/api-practice/api-practice.cabal
@@ -1,6 +1,6 @@
 cabal-version: 1.12
 
--- This file has been generated from package.yaml by hpack version 0.35.0.
+-- This file has been generated from package.yaml by hpack version 0.35.2.
 --
 -- see: https://github.com/sol/hpack
 
@@ -25,14 +25,23 @@ source-repository head
 
 library
   exposed-modules:
+      AlphaVantage.Const
+      AlphaVantage.Search
+      AlphaVantage.Types
+      Config.Config
       Lib
+      Utils.LoadEnv
   other-modules:
       Paths_api_practice
   hs-source-dirs:
       src
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
-      base >=4.7 && <5
+      attoparsec
+    , base >=4.7 && <5
+    , bytestring
+    , containers
+    , word8
   default-language: Haskell2010
 
 executable api-practice-exe
@@ -44,7 +53,11 @@ executable api-practice-exe
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       api-practice
+    , attoparsec
     , base >=4.7 && <5
+    , bytestring
+    , containers
+    , word8
   default-language: Haskell2010
 
 test-suite api-practice-test
@@ -57,5 +70,9 @@ test-suite api-practice-test
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       api-practice
+    , attoparsec
     , base >=4.7 && <5
+    , bytestring
+    , containers
+    , word8
   default-language: Haskell2010
