--- a/api-practice/api-practice.cabal
+++ b/api-practice/api-practice.cabal
@@ -36,10 +36,12 @@ library
       src
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
-      attoparsec
+      HUnit
+    , attoparsec
     , base >=4.7 && <5
     , bytestring
     , containers
+    , raw-strings-qq
     , word8
   default-language: Haskell2010
 
@@ -51,11 +53,13 @@ executable api-practice-exe
       app
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      api-practice
+      HUnit
+    , api-practice
     , attoparsec
     , base >=4.7 && <5
     , bytestring
     , containers
+    , raw-strings-qq
     , word8
   default-language: Haskell2010
 
@@ -63,15 +67,18 @@ test-suite api-practice-test
   type: exitcode-stdio-1.0
   main-is: Spec.hs
   other-modules:
+      Test.Utils.LoadEnv
       Paths_api_practice
   hs-source-dirs:
       test
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      api-practice
+      HUnit
+    , api-practice
     , attoparsec
     , base >=4.7 && <5
     , bytestring
     , containers
+    , raw-strings-qq
     , word8
   default-language: Haskell2010
