looked up a ticker

--- a/api-practice/package.yaml
+++ b/api-practice/package.yaml
@@ -27,6 +27,12 @@ dependencies:
 - word8
 - HUnit
 - raw-strings-qq
+- filepath
+- exceptions
+- url
+- http-client-tls
+- http-client
+- http-types
 
 ghc-options:
 - -Wall
