--- a/api-practice/api-practice.cabal
+++ b/api-practice/api-practice.cabal
@@ -28,8 +28,10 @@ library
       AlphaVantage.Const
       AlphaVantage.Search
       AlphaVantage.Types
+      AlphaVantage.Urls
       Config.Config
       Utils.LoadEnv
+      Utils.Urls
   other-modules:
       Paths_api_practice
   hs-source-dirs:
@@ -41,7 +43,13 @@ library
     , base >=4.7 && <5
     , bytestring
     , containers
+    , exceptions
+    , filepath
+    , http-client
+    , http-client-tls
+    , http-types
     , raw-strings-qq
+    , url
     , word8
   default-language: Haskell2010
 
@@ -59,7 +67,13 @@ executable api-practice-exe
     , base >=4.7 && <5
     , bytestring
     , containers
+    , exceptions
+    , filepath
+    , http-client
+    , http-client-tls
+    , http-types
     , raw-strings-qq
+    , url
     , word8
   default-language: Haskell2010
 
@@ -79,6 +93,12 @@ test-suite api-practice-test
     , base >=4.7 && <5
     , bytestring
     , containers
+    , exceptions
+    , filepath
+    , http-client
+    , http-client-tls
+    , http-types
     , raw-strings-qq
+    , url
     , word8
   default-language: Haskell2010
