--- a/api-practice/api-practice.cabal
+++ b/api-practice/api-practice.cabal
@@ -26,6 +26,8 @@ source-repository head
 library
   exposed-modules:
       AlphaVantage.Const
+      AlphaVantage.MarketTypes
+      AlphaVantage.Parsing.Search
       AlphaVantage.Search
       AlphaVantage.Types
       AlphaVantage.Urls
@@ -39,6 +41,7 @@ library
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
       HUnit
+    , aeson
     , attoparsec
     , base >=4.7 && <5
     , bytestring
@@ -49,6 +52,7 @@ library
     , http-client-tls
     , http-types
     , raw-strings-qq
+    , text
     , url
     , word8
   default-language: Haskell2010
@@ -62,6 +66,7 @@ executable api-practice-exe
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       HUnit
+    , aeson
     , api-practice
     , attoparsec
     , base >=4.7 && <5
@@ -73,6 +78,7 @@ executable api-practice-exe
     , http-client-tls
     , http-types
     , raw-strings-qq
+    , text
     , url
     , word8
   default-language: Haskell2010
@@ -88,6 +94,7 @@ test-suite api-practice-test
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       HUnit
+    , aeson
     , api-practice
     , attoparsec
     , base >=4.7 && <5
@@ -99,6 +106,7 @@ test-suite api-practice-test
     , http-client-tls
     , http-types
     , raw-strings-qq
+    , text
     , url
     , word8
   default-language: Haskell2010
