refactored the query out of the main function
I see how `MonadIO m` is useful, it lets me use `liftIO` and it can work
for monad stacks instead of just the IO monad

--- a/api-practice/api-practice.cabal
+++ b/api-practice/api-practice.cabal
@@ -51,6 +51,7 @@ library
     , http-client
     , http-client-tls
     , http-types
+    , mtl
     , raw-strings-qq
     , text
     , url
@@ -77,6 +78,7 @@ executable api-practice-exe
     , http-client
     , http-client-tls
     , http-types
+    , mtl
     , raw-strings-qq
     , text
     , url
@@ -105,6 +107,7 @@ test-suite api-practice-test
     , http-client
     , http-client-tls
     , http-types
+    , mtl
     , raw-strings-qq
     , text
     , url
