some types for hitting the Daily endpoint

--- a/api-practice/api-practice.cabal
+++ b/api-practice/api-practice.cabal
@@ -26,6 +26,7 @@ source-repository head
 library
   exposed-modules:
       AlphaVantage.Const
+      AlphaVantage.Daily
       AlphaVantage.MarketTypes
       AlphaVantage.Parsing.Search
       AlphaVantage.Search
