this works but this is not ideal. I need to ask for a better way on reddit/so

--- a/api-practice/api-practice.cabal
+++ b/api-practice/api-practice.cabal
@@ -30,6 +30,7 @@ library
       AlphaVantage.Fetches
       AlphaVantage.MarketTypes
       AlphaVantage.Parsing.Search
+      AlphaVantage.Parsing.Utils
       AlphaVantage.Search
       AlphaVantage.Types
       AlphaVantage.Urls
